# eustace-system

./: LICENSE  README.md
data/descriptors/: inputs.json
data/docs/: WP2_MS12_recommendations_data_formats.docx  WP2_MS15_product_design.docx  WP2_system_design.docx  WP2_system_technical_requirements.docx
data/docs/sphinx/: analysis.api.advanced.rst  analysis.api.diagnostics.rst  analysis.api.fileio.rst  analysis.api.mesh.rst  analysis.api.rst  analysis.guide.rst  analysis.rst  archivenote.rst  codingstandards.rst  conf.py  cpp_example_analysis_input.rst  cppanalysisinputs.rst  cppintroduction.rst  developerguide.rst  developmentprocess.rst  documentation.rst  eumopps.api.rst  eumopps.rst  fullstace.guide.rst  fullstace.info.rst  fullstace.rawbinary.rst  fullstace.rst  index.rst  inputcheck.rst  outputformats.api.rst  outputformats.rst  parsedoc.api.rst  parsedoc.rst  postprocess.api.rst  postprocess.rst  preprocess.api.rst  preprocess.guide.rst  preprocess.rst  satgrid.api.rst  satgrid.guide.rst  satgrid.rst  satgrid_generation.api.rst  satgrid_iris.api.rst  satgrid_iris.guide.rst  satstace.guide.rst  (+7 more)
data/style/: pylint.rc
src/: __init__.py  eustaceconfig.py  setup.py
src/cpp/: CMakeLists.txt
src/cpp/eustace/: CMakeLists.txt
src/cpp/eustace/test/: TestBreakPointsReader.cpp
src/eumopps/: __init__.py  toolchain.py
src/eumopps/catalogue/: __init__.py  build.py  catalogue.py  checksum.py  commandcount.py  commandrun.py  datareference.py  dataset.py  jsonfiller.py  multiplecommandsrun.py  namepatterns.py  operation.py  (+5 more)
src/eustace/: __init__.py  toolchain.py
(+451 files in other folders)
